--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,20 @@ jobs:
         uses: actions/checkout@v2
 
       - 
+        name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      
+      - 
+        name: 'Install nodejs dependencies'
+        run: npm ci
+  
+      - 
+        name: 'Run Unit Tests'
+        run: npm run test
+
+      - 
         name: 'Dockerhub Registry Login'
         uses: docker/login-action@v1.12.0
         with:
